// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders MessageCard (poster is admin) 1`] = `
<div>
  <div
    class="_card_0a2670"
    id="2"
  >
    <div
      class="_metadata_0a2670"
    >
      <span
        class="_msgNumOp_0a2670"
      >
        #
        2
      </span>
      <span
        class="_username--admin_0a2670"
      >
        LIHKG
      </span>
      <span
        class="_replyTime_0a2670"
      >
        2019年10月18日 06:20:00
      </span>
    </div>
    <div
      class="_msg_0a2670"
    >
      This is a test message
    </div>
    <div
      class="_votes_0a2670"
    >
      <div
        class="MuiStack-root css-so8pc8-MuiStack-root"
      >
        <div
          class="MuiStack-root css-1rlitzi-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="ThumbUpOffAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m13.11 5.72-.57 2.89c-.12.59.04 1.2.42 1.66s.94.73 1.54.73H20v1.08L17.43 18H9.34c-.18 0-.34-.16-.34-.34V9.82zM14 2 7.59 8.41C7.21 8.79 7 9.3 7 9.83v7.83C7 18.95 8.05 20 9.34 20h8.1c.71 0 1.36-.37 1.72-.97l2.67-6.15c.11-.25.17-.52.17-.8V11c0-1.1-.9-2-2-2h-5.5l.92-4.65c.05-.22.02-.46-.08-.66-.23-.45-.52-.86-.88-1.22zM4 9H2v11h2c.55 0 1-.45 1-1v-9c0-.55-.45-1-1-1"
            />
          </svg>
           
          10
        </div>
        <div
          class="MuiStack-root css-1rlitzi-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="ThumbDownOffAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m10.89 18.28.57-2.89c.12-.59-.04-1.2-.42-1.66S10.1 13 9.5 13H4v-1.08L6.57 6h8.09c.18 0 .34.16.34.34v7.84zM10 22l6.41-6.41c.38-.38.59-.89.59-1.42V6.34C17 5.05 15.95 4 14.66 4h-8.1c-.71 0-1.36.37-1.72.97l-2.67 6.15c-.11.25-.17.52-.17.8V13c0 1.1.9 2 2 2h5.5l-.92 4.65c-.05.22-.02.46.08.66.23.45.52.86.88 1.22zm10-7h2V4h-2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1"
            />
          </svg>
           
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders MessageCard (poster is female) 1`] = `
<div>
  <div
    class="_card_0a2670"
    id="2"
  >
    <div
      class="_metadata_0a2670"
    >
      <span
        class="_msgNum_0a2670"
      >
        #
        2
      </span>
      <span
        class="_username--F_0a2670"
      >
        TestUser
      </span>
      <span
        class="_replyTime_0a2670"
      >
        2021年6月30日 19:00:00
      </span>
    </div>
    <div
      class="_msg_0a2670"
    >
      This is a test message
    </div>
    <div
      class="_votes_0a2670"
    >
      <div
        class="MuiStack-root css-so8pc8-MuiStack-root"
      >
        <div
          class="MuiStack-root css-1rlitzi-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="ThumbUpOffAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m13.11 5.72-.57 2.89c-.12.59.04 1.2.42 1.66s.94.73 1.54.73H20v1.08L17.43 18H9.34c-.18 0-.34-.16-.34-.34V9.82zM14 2 7.59 8.41C7.21 8.79 7 9.3 7 9.83v7.83C7 18.95 8.05 20 9.34 20h8.1c.71 0 1.36-.37 1.72-.97l2.67-6.15c.11-.25.17-.52.17-.8V11c0-1.1-.9-2-2-2h-5.5l.92-4.65c.05-.22.02-.46-.08-.66-.23-.45-.52-.86-.88-1.22zM4 9H2v11h2c.55 0 1-.45 1-1v-9c0-.55-.45-1-1-1"
            />
          </svg>
           
          10
        </div>
        <div
          class="MuiStack-root css-1rlitzi-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="ThumbDownOffAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m10.89 18.28.57-2.89c.12-.59-.04-1.2-.42-1.66S10.1 13 9.5 13H4v-1.08L6.57 6h8.09c.18 0 .34.16.34.34v7.84zM10 22l6.41-6.41c.38-.38.59-.89.59-1.42V6.34C17 5.05 15.95 4 14.66 4h-8.1c-.71 0-1.36.37-1.72.97l-2.67 6.15c-.11.25-.17.52-.17.8V13c0 1.1.9 2 2 2h5.5l-.92 4.65c-.05.22-.02.46.08.66.23.45.52.86.88 1.22zm10-7h2V4h-2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1"
            />
          </svg>
           
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders MessageCard (poster is male) 1`] = `
<div>
  <div
    class="_card_0a2670"
    id="2"
  >
    <div
      class="_metadata_0a2670"
    >
      <span
        class="_msgNum_0a2670"
      >
        #
        2
      </span>
      <span
        class="_username--M_0a2670"
      >
        TestUser
      </span>
      <span
        class="_replyTime_0a2670"
      >
        2021年6月30日 19:00:00
      </span>
    </div>
    <div
      class="_msg_0a2670"
    >
      This is a test message
    </div>
    <div
      class="_votes_0a2670"
    >
      <div
        class="MuiStack-root css-so8pc8-MuiStack-root"
      >
        <div
          class="MuiStack-root css-1rlitzi-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="ThumbUpOffAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m13.11 5.72-.57 2.89c-.12.59.04 1.2.42 1.66s.94.73 1.54.73H20v1.08L17.43 18H9.34c-.18 0-.34-.16-.34-.34V9.82zM14 2 7.59 8.41C7.21 8.79 7 9.3 7 9.83v7.83C7 18.95 8.05 20 9.34 20h8.1c.71 0 1.36-.37 1.72-.97l2.67-6.15c.11-.25.17-.52.17-.8V11c0-1.1-.9-2-2-2h-5.5l.92-4.65c.05-.22.02-.46-.08-.66-.23-.45-.52-.86-.88-1.22zM4 9H2v11h2c.55 0 1-.45 1-1v-9c0-.55-.45-1-1-1"
            />
          </svg>
           
          10
        </div>
        <div
          class="MuiStack-root css-1rlitzi-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="ThumbDownOffAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m10.89 18.28.57-2.89c.12-.59-.04-1.2-.42-1.66S10.1 13 9.5 13H4v-1.08L6.57 6h8.09c.18 0 .34.16.34.34v7.84zM10 22l6.41-6.41c.38-.38.59-.89.59-1.42V6.34C17 5.05 15.95 4 14.66 4h-8.1c-.71 0-1.36.37-1.72.97l-2.67 6.15c-.11.25-.17.52-.17.8V13c0 1.1.9 2 2 2h5.5l-.92 4.65c-.05.22-.02.46.08.66.23.45.52.86.88 1.22zm10-7h2V4h-2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1"
            />
          </svg>
           
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders MessageCard (poster is original poster) 1`] = `
<div>
  <div
    class="_card_0a2670"
    id="1"
  >
    <div
      class="_metadata_0a2670"
    >
      <span
        class="_msgNumOp_0a2670"
      >
        #
        1
      </span>
      <span
        class="_username--M_0a2670"
      >
        TestUser
      </span>
      <span
        class="_replyTime_0a2670"
      >
        2021年6月30日 19:00:00
      </span>
    </div>
    <div
      class="_msg_0a2670"
    >
      This is a test message
    </div>
    <div
      class="_votes_0a2670"
    >
      <div
        class="MuiStack-root css-so8pc8-MuiStack-root"
      >
        <div
          class="MuiStack-root css-1rlitzi-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="ThumbUpOffAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m13.11 5.72-.57 2.89c-.12.59.04 1.2.42 1.66s.94.73 1.54.73H20v1.08L17.43 18H9.34c-.18 0-.34-.16-.34-.34V9.82zM14 2 7.59 8.41C7.21 8.79 7 9.3 7 9.83v7.83C7 18.95 8.05 20 9.34 20h8.1c.71 0 1.36-.37 1.72-.97l2.67-6.15c.11-.25.17-.52.17-.8V11c0-1.1-.9-2-2-2h-5.5l.92-4.65c.05-.22.02-.46-.08-.66-.23-.45-.52-.86-.88-1.22zM4 9H2v11h2c.55 0 1-.45 1-1v-9c0-.55-.45-1-1-1"
            />
          </svg>
           
          10
        </div>
        <div
          class="MuiStack-root css-1rlitzi-MuiStack-root"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
            data-testid="ThumbDownOffAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m10.89 18.28.57-2.89c.12-.59-.04-1.2-.42-1.66S10.1 13 9.5 13H4v-1.08L6.57 6h8.09c.18 0 .34.16.34.34v7.84zM10 22l6.41-6.41c.38-.38.59-.89.59-1.42V6.34C17 5.05 15.95 4 14.66 4h-8.1c-.71 0-1.36.37-1.72.97l-2.67 6.15c-.11.25-.17.52-.17.8V13c0 1.1.9 2 2 2h5.5l-.92 4.65c-.05.22-.02.46.08.66.23.45.52.86.88 1.22zm10-7h2V4h-2c-.55 0-1 .45-1 1v9c0 .55.45 1 1 1"
            />
          </svg>
           
          2
        </div>
      </div>
    </div>
  </div>
</div>
`;
